@@ -13,14 +13,35 @@ size_t ffi_pl_sizeof(ffi_pl_type *);
 void ffi_pl_perl_complex_float(SV *sv, float *ptr);
 void ffi_pl_perl_complex_double(SV *sv, double *ptr);
 
-#define ffi_pl_perl_long_double(sv, ptr)                         \
+#define ffi_pl_perl_to_long_double(sv, ptr)                           \
+  if(!SvOK(sv))                                                       \
+  {                                                                   \
+    *(ptr) = 0.0L;                                                    \
+  }                                                                   \
+  else if(sv_isobject(sv) && sv_derived_from(sv, "Math::LongDouble")) \
+  {                                                                   \
+    *(ptr) = *INT2PTR(long double *, SvIV((SV*) SvRV(sv)));           \
+  }                                                                   \
+  else                                                                \
+  {                                                                   \
+    *(ptr) = (long double) SvNV(sv);                                  \
+  }
+
+#define ffi_pl_long_double_to_perl(sv, ptr)                      \
   if(sv_isobject(sv) && sv_derived_from(sv, "Math::LongDouble")) \
   {                                                              \
-    *ptr = *INT2PTR(long double *, SvIV((SV*) SvRV(arg)));       \
+    *INT2PTR(long double *, SvIV((SV*) SvRV(sv))) = *(ptr);      \
+  }                                                              \
+  else if(have_math_longdouble)                                  \
+  {                                                              \
+    long double *tmp;                                            \
+    Newx(tmp, 1, long double);                                   \
+    *tmp = *(ptr);                                               \
+    sv_setref_pv(sv, "Math::LongDouble", (void*)tmp);            \
   }                                                              \
   else                                                           \
   {                                                              \
-    *ptr = (long double) SvNV(arg);                              \
+    sv_setnv(sv, *(ptr));                                        \
   }
 
 #ifdef __cplusplus
