@@ -34,12 +34,12 @@ subtest 'aliased type' => sub {
   ok scalar(grep { $_ eq 'my_integer_8' } $ffi->types), 'ffi.types returns my_integer_8';
 };
 
-my @list = qw( sint8 uint8 sint16 uint16 sint32 uint32 sint64 uint64 float double opaque string );
+my @list = qw( sint8 uint8 sint16 uint16 sint32 uint32 sint64 uint64 float double opaque string longdouble complex_float complex_double );
 
 subtest 'ffi basic types' => sub {
-  plan tests => 3 + scalar @list;
+  plan tests => scalar @list;
 
-  foreach my $name (@list, 'longdouble', 'complex_float', 'complex_double')
+  foreach my $name (@list)
   {
     subtest $name => sub {
       
@@ -66,7 +66,7 @@ subtest 'ffi basic types' => sub {
 subtest 'ffi pointer types' => sub {
   plan tests => scalar @list;
 
-  foreach my $name (map { "$_ *" } qw( sint8 uint8 sint16 uint16 sint32 uint32 sint64 uint64 float double opaque string ))
+  foreach my $name (map { "$_ *" } @list)
   {
     subtest $name => sub {
       plan skip_all => 'ME GRIMLOCK SAY STRING CAN NO BE POINTER' if $name eq 'string *';
@@ -88,7 +88,7 @@ subtest 'ffi array types' => sub {
 
   my $size = 5;
 
-  foreach my $basic (qw( sint8 uint8 sint16 uint16 sint32 uint32 sint64 uint64 float double opaque string ))
+  foreach my $basic (@list)
   {
     my $name = "$basic [$size]";
   
